apps/site-publico/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsv-gen2
  labels:
    name: rsv-gen2
    environment: production
